--- a/index.html
+++ b/index.html
@@ -17,19 +17,19 @@
         <h1>CSS Gradients</h1>
         <div class="wrapper">
             <div class="card">
-                <div class="box"></div>
+                <div class="box box--wind"></div>
                 <h2>Sunrise</h2>
                 <hr>
                 <button>Button</button>
             </div>
             <div class="card ">
-                <div class="box "></div>
+                <div class="box box--ice"></div>
                 <h2>Frost</h2>
                 <hr>
                 <button>Button</button>
             </div>
             <div class="card">
-                <div class="box"></div>
+                <div class="box box--flame"></div>
                 <h2>Lime</h2>
                 <hr>
                 <button>Button</button>
