--- a/index.html
+++ b/index.html
@@ -20,19 +20,19 @@
                 <div class="box box--wind"></div>
                 <h2>Sunrise</h2>
                 <hr>
-                <button>Button</button>
+                <button class="button--wind">Button</button>
             </div>
             <div class="card ">
                 <div class="box box--ice"></div>
                 <h2>Frost</h2>
                 <hr>
-                <button>Button</button>
+                <button class="button--ice">Button</button>
             </div>
             <div class="card">
                 <div class="box box--flame"></div>
                 <h2>Lime</h2>
                 <hr>
-                <button>Button</button>
+                <button class="button--flame">Button</button>
             </div>
         </div>
         <h1>The Team</h1>
